# mastotg

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
migrations/: V00020001__add_id_map_state_tables.sql  format.sh
pkg/common/: mastotg.service  mastotg.timer
pkg/debian/: postinst
src/: as2.rs  cli.rs  con.rs  cons.rs  consumer.rs  db.rs  main.rs  post.rs  pro.rs  producer.rs  query.rs  utils.rs
tests/fixtures/: create.json  page.json  post_link.json  post_multi_grouped_images.json  post_tag.json  post_text.json
