[package]
name = "mastotg"
version = "0.1.0"
edition = "2021"
authors = ["myl7 <myl@myl.moe>"]
description = "Forward posts from Mastodon to Telegram channels"
documentation = "https://github.com/myl7/mastotg#readme"
homepage = "https://github.com/myl7/mastotg"
repository = "https://github.com/myl7/mastotg.git"
license = "Apache-2.0"
keywords = [
  "mastodon",
  "telegram",
  "rss",
  "bot",
  "cross-platform",
  "social-media",
]

[dependencies]
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["blocking"] }
rss = "2.0.4"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive", "env"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
regex = "1.9.1"
