[package]
name = "mastotg"
version = "0.2.0"
edition = "2021"
authors = ["myl7 <myl@myl.moe>"]
description = "Forward posts from Mastodon to Telegram channels"
documentation = "https://github.com/myl7/mastotg#readme"
homepage = "https://github.com/myl7/mastotg"
repository = "https://github.com/myl7/mastotg.git"
license = "Apache-2.0"
keywords = [
  "mastodon",
  "telegram",
  "rss",
  "bot",
  "cross-platform",
  "social-media",
]

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
reqwest = { version = "0.11.18", features = ["json"] }
clap = { version = "4.3.19", features = ["derive"] }
regex = "1.9.1"
teloxide = "0.12.2"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "fs"] }
env_logger = "0.10.0"
log = "0.4.19"
quick-xml = "0.30.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.2.0"
async-trait = "0.1.73"
rusqlite = { version = "0.29.0", features = ["bundled"] }
refinery = { version = "0.8.10", features = ["rusqlite-bundled"] }
